@@ -125,6 +125,7 @@ Version 1.9.0-svn:
      Default value is 'yes' (bug #15921)
    * Draw the map border over _off^_usr tiles too.
    * Add 'immutable' key to [label], defaulting to true (feature #16078)
+   * Added search_recall_list key to [have_unit] tag
  * Miscellaneous and bug fixes:
    * Added help entry when new unit is created directly in the recall list
    * Defaulted log level to warning again
